--- a/public/form5.html
+++ b/public/form5.html
@@ -8,14 +8,14 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9; /* Light beige background */
+            background-color: #321bc9; /* Light beige background */
             margin: 0;
             padding: 20px;
         }
 
         h1 {
             text-align: center;
-            color: #333;
+            color: white;
         }
 
         #form5 {
@@ -66,7 +66,7 @@
 </head>
 
 <body>
-    <h1>Presenter Poem</h1>
+    <h1> Poem Presenter</h1>
     <form id="form5" action="/submit-poem" method="post" enctype="multipart/form-data">
         <label for="poemFile">Upload a text file containing poem lines (separated by line breaks):</label><br>
         <input type="file" id="poemFile" name="poemFile" accept=".txt" required><br>
