--- a/public/form3.html
+++ b/public/form3.html
@@ -27,7 +27,7 @@
 
 <body>
     <h1>Album Simple</h1>
-    <form action="http://localhost:4021/submit-album" method="post" enctype="multipart/form-data">
+    <form action="/submit-album" method="post" enctype="multipart/form-data">
         <label for="imageFile">Upload Image:</label><br>
         <input type="file" id="imageFile" name="imageFile" accept="image/*"><br><br>
         <input type="checkbox" id="clearImages" name="clearImages">
