--- a/public/form1.html
+++ b/public/form1.html
@@ -1,4 +1,4 @@
-/*rame ibrahem and ali khatib*/
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draw Steps</title>
-    <style>
+    <style>/*rame ibrahem and ali khatib*/
         body {
             font-family: Arial, sans-serif;
             background-color: #321bc9; /* Light beige background */
