--- a/public/form3.html
+++ b/public/form3.html
@@ -1,4 +1,3 @@
-/*rame ibrahem and ali khatib*/
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <title>Album Simple</title>
-    <style>
+    <style>/*rame ibrahem and ali khatib*/
         body {
             font-family: Arial, sans-serif;
             background-color: #321bc9; /* Consistent dark blue background */
